# AgenticCrewzLine

./: .gitignore  AgenticAI.docx  README.md  news_blog_post.md  requirements.txt
src/financial_analyst/: README.md  pyproject.toml
src/financial_analyst/src/financial_analyst/: crew.py  financial_analysis_TSLA.md  main.py
src/financial_analyst/src/financial_analyst/config/: agents.yaml  tasks.yaml
src/financial_analyst/src/financial_analyst/tools/: sec_tools.py
src/hello_crewai/: agents.py  crew.py  main.py  news_blog_post.md  tasks.py  tools.py
